<resources>
    <string name="nombre_app">Fixit</string>
    <string name="titulo_portada">Fixit</string>
    <string name="subtitulo_portada">Servicios a tu Alcance</string>
    <string name="descripcion_portada">Te conectamos con los especialistas que necesitas.</string>
    <string name="texto_boton_portada">Iniciar Sesión</string>
    <string name="pregunta_portada">¿No tienes una cuenta?</string>
    <string name="registro_portada"><u>Regístrate</u></string>
    <string name="register_specialist_title">Registro Especialista</string>
    <string name="btn_cargar">Cargar</string>
    <string name="btn_eliminar">Eliminar</string>
    <string name="text1_register_specialist"><u>Nombre y Apellido: </u></string>
    <string name="email_register_specialist"><u>Correo Electrónico: </u></string>
    <string name="rut_register_specialist"><u>Rut sin puntos ni guión: </u></string>
    <string name="phone_register_specialist"><u>Teléfono: </u></string>
    <string name="profession_register_specilialist"><u>Profesión/Especialidad: </u></string>
    <string name="password_register_specialist"><u>Contraseña: </u></string>
    <string name="password2_register_specialist"><u>Confirme su Contraseña: </u></string>
    <string name="text_certificado_de_antecedentes"><u>Certificado de Antecedentes: </u></string>
    <string name="btn_upload_certificate">Adjuntar</string>
    <string name="btn_register_specialist">Registrarse</string>
    <string name="text_selection_user">ESCOJA SU USUARIO:</string>
    <string name="button1_selection_user">ESPECIALISTA</string>
    <string name="button2_selection_user">CLIENTE</string>
    <string name="login_specialist_title">Iniciar Sesión</string>
    <string name="email_login_specialist"><u>Correo Electrónico: </u></string>
    <string name="password_login_specialist"><u>Contraseña: </u></string>
    <string name="btnLogin">Ingresar</string>
    <string name="olvido_su_contrasena">¿Olvidó su contraseña?</string>
    <string name="titulo_home">Bienvenid@ a Fixit</string>
    <string name="btn_perfil_home">Perfil</string>
    <string name="text1_cliente_home">Servicios de Excelencia</string>
    <string name="text1_especialista_home">Tu Trabajo es Recompensado</string>
    <string name="text2_home">Te ayudamos en lo que necesites 24/7</string>
    <string name="text3_cliente_home">Te acercamos servicios de calidad, a un solo click.</string>
    <string name="text3_especialista_home">Facilitamos tus ventas, a un solo click.</string>
    <string name="text4_home">Garantizamos que tu necesidad sea cubierta con nuestros especialistas.</string>
    <string name="item1_menu">Inicio</string>
    <string name="item2_menu">Servicios</string>
    <string name="item3_menu">Menú</string>
    <string name="item4_menu">Ayuda</string>
    <string name="titulo_perfil">Mi Perfil</string>
    <string name="edit_profile_pic">Foto de Perfil</string>
    <string name="btn_cargarfoto_perfil">Cargar</string>
    <string name="btn_eliminarfoto_perfil">Eliminar</string>
    <string name="nombre_y_apellido"><u>Nombre y Apellido: </u></string>
    <string name="rut"><u>Rut: </u></string>
    <string name="correo_electr_nico"><u>Correo Electrónico: </u></string>
    <string name="ciudad_especialista"><u>Ciudad: </u></string>
    <string name="tel_fono"><u>Teléfono: </u></string>
    <string name="profesi_n_especialidad"><u>Profesión/Especialidad: </u></string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="crear_servicio">Crear servicio</string>
    <string name="nombre_del_servicio"><u>Nombre del Servicio: </u></string>
    <string name="categoria_servicio"><u>Categoría: </u></string>
    <string name="descripcion_del_servicio"><u>Descripción del Servicio: </u></string>
    <string name="precio_del_servicio"><u>Precio del Servicio: </u></string>
    <string name="btn_cargar_imgservicio_especialista">Cargar</string>
    <string name="btn_publicar_servicio">Publicar Servicio</string>
    <string name="imagenes_de_tus_trabajos"><u>Imágen de tu trabajo: </u></string>
    <string name="titulo_categorias">Categorías de servicios</string>
    <string name="texto_categorias">Ofrece entre una de las categorías disponibles:</string>
    <string name="txt_limpieza">Limpieza</string>
    <string name="txt_transporte">Transporte</string>
    <string name="txt_electricidad">Electricidad</string>
    <string name="txt_fontaneria">Fontanería</string>
    <string name="txt_tecnologia">Tecnología</string>
    <string name="txt_carpinteria">Carpinteria</string>
    <string name="txt_cuidadopersonal">Cuidado Personal</string>
    <string name="txt_comida">Comida</string>
    <string name="txt_construccion">Construcción</string>
    <string name="txt_contactanos">Contáctanos</string>
    <string name="numero_de_contacto">+56 9 347 096 35</string>
    <string name="txt_correo">fixitoficial2024@gmail.com</string>
    <string name="servicios_a_domicilio">Servicios a Domicilio</string>
    <string name="btn_llamar">Llama <u>Aquí</u></string>
    <string name="btn_contactar_correo">Email <u>Aquí</u></string>
    <string name="fixit_tittle">Fixit</string>
    <string name="txt_slogan_help">Te conectamos con los especialistas que necesitas.</string>
    <string name="titulo_detalle_servicio_especialista">Detalles del Servicio</string>
    <string name="txt_excelente">Excelente</string>
    <string name="txt_deficiente">Deficiente</string>
    <string name="txt_calificacion">Calificación</string>
    <string name="nombreservicio"><u>Nombre del servicio: </u></string>
    <string name="categoriaservicio"><u>Categoría del servicio: </u></string>
    <string name="precio_servicio"><u>Precio del servicio: </u></string>
    <string name="descripcion_servicio"><u>Descripción del servicio: </u></string>
    <string name="btnservicios">Servicios</string>
    <string name="btncontactar">Contactar</string>
    <string name="btncomentarios">Comentarios</string>
    <string name="eliminar_servicio">X</string>
    <string name="btn_eliminar_servicio_admin">Eliminar Servicio</string>
    <string name="titulo_comentarios_especialista">Comentarios</string>
    <string name="esp_nombrecliente">Nombre Cliente</string>
    <string name="titulo_servicios_especialista">Servicios</string>
    <string name="btn_ver_servicio">Ver Servicio</string>
    <string name="txt_nombre_servicio"><u>Nombre Servicio</u></string>
    <string name="txt_descripcion_servicio"><u>Descripción:</u></string>
    <string name="txt_precio_servicio"><u>Precio:</u></string>
    <string name="txt_ayuda_especialista"><u>¿Necesitas Ayuda?</u></string>
    <string name="volver_atras">volver atrás</string>
    <string name="ofrecer_nuevo_servicio">Ofrecer nuevo servicio</string>
    <string name="mis_servicios">Mis servicios</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="despliege">despliege</string>
    <string name="menu_cambiar_contrase_a">Cambiar Contraseña</string>
    <string name="cambiar_contrase_a">Cambiar Contraseña</string>
    <string name="contrase_a_actual"><u>Contraseña Actual: </u></string>
    <string name="inserte_su_contrase_a_actual">Inserte su contraseña actual</string>
    <string name="contrase_a_nueva"><u>Contraseña Nueva: </u></string>
    <string name="inserte_su_nueva_contrase_a">Inserte su nueva contraseña</string>
    <string name="confirmar_contrase_a"><u>Confirmar Contraseña: </u></string>
    <string name="confirme_su_nueva_contrase_a">Confirme su nueva contraseña</string>
    <string name="btn_cambiar_contrase_a">Cambiar Contraseña</string>
    <string name="register_client_title">Registro Cliente</string>
    <string name="btn_cargar_client">Cargar</string>
    <string name="btn_eliminar_client">Eliminar</string>
    <string name="text1_register_client"><u>Nombre y Apellido: </u></string>
    <string name="email_register_client"><u>Correo Electrónico: </u></string>
    <string name="rut_register_client"><u>Rut sin puntos ni guión: </u></string>
    <string name="phone_register_client"><u>Teléfono: </u></string>
    <string name="password_register_client"><u>Contraseña: </u></string>
    <string name="password2_register_client"><u>Confirme su Contraseña: </u></string>
    <string name="btn_register_client">Registrarse</string>
    <string name="ej_123456789">Ej: 123456789</string>
    <string name="correo_ejemplo_com">correo@ejemplo.com</string>
    <string name="ej_912345678">Ej: 912345678</string>
    <string name="titulo_comentarios_clientes">Comentarios</string>
    <string name="nombrecliente">Nombre Cliente</string>
    <string name="nuevocomentario"><u>Nuevo comentario: </u></string>
    <string name="publicarcomentario">Publicar comentario</string>
    <string name="calificar"><u>Calificar: </u></string>
    <string name="anadir_new_comment">Nuevo comentario: </string>
    <string name="header_admin">Menú Admin</string>
    <string name="ver_clientes">Lista de clientes</string>
    <string name="ver_especialistas">Lista de especialistas</string>
    <string name="solicitudes">Solicitudes</string>
    <string name="titulo_lista_clientes">Lista de Clientes</string>
    <string name="titulo_lista_especialistas">Lista de Especialistas</string>
    <string name="titulo_autorizar_especialistas">Autorizar Especialistas</string>
    <string name="titulo_menu">Menú</string>
    <string name="nombredelUsuario"><u>Nombre y Apellido: </u></string>
    <string name="btn_eliminar_foto">Eliminar Foto</string>
    <string name="titulo_perfil_clientes">Perfil Cliente</string>
    <string name="btn_eliminar_cliente">Eliminar Cliente</string>
    <string name="titulo_perfil_especialistas">Perfil Especialista</string>
    <string name="txt_servicios_especialista"><u>Servicios del especialista: </u></string>
    <string name="btn_servicios_especialista">Ver Servicios</string>
    <string name="txt_antecedentes_especialista"><u>Certificado de Antecedentes: </u></string>
    <string name="btn_antecedentes_especialista">Descargar Certificado</string>
    <string name="btn_eliminar_especialista">Eliminar Especialista</string>
    <string name="btn_autorizar_especialista">Autorizar Especialista</string>
    <string name="solicitud_de_servicio">Solicitud de Servicio</string>
    <string name="categor_a_de_servicio">Categoría de servicio</string>
    <string name="nombre_del_especialista">Nombre del Especialista</string>
    <string name="precio">Precio</string>
    <string name="aceptar">Aceptar</string>
    <string name="rechazar">Rechazar</string>
    <string name="especialistas">Especialistas</string>
    <string-array name="simple_items">
        <item>Seleccionar ciudad</item> 
        <item>Cauquenes</item>
        <item>Chanco</item>
        <item>Colbun</item>
        <item>Constitución</item>
        <item>Curanipe</item>
        <item>Curicó</item>
        <item>Curepto</item>
        <item>Empedrado</item>
        <item>Hualañé</item>
        <item>Licanten</item>
        <item>Linares</item>
        <item>Longaví</item>
        <item>Maule</item>
        <item>Molina</item>
        <item>Nirivilo</item>
        <item>Paninavida</item>
        <item>Parral</item>
        <item>Pelarco</item>
        <item>Pelluhue</item>
        <item>Pencahue</item>
        <item>Rauco</item>
        <item>Retiro</item>
        <item>Río Claro</item>
        <item>Romeral</item>
        <item>Sagrada Familia</item>
        <item>San Clemente</item>
        <item>San Javier de Loncomilla</item>
        <item>San Rafael</item>
        <item>Talca</item>
        <item>Teno</item>
        <item>Vichuquén</item>
        <item>Villa Alegre</item>
        <item>Yerbas Buenas</item>
    </string-array>
</resources>