<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container_ayuda"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundapp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Help">

    <TextView
        android:id="@+id/text_contactanos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/txt_contactanos"
        android:textColor="@color/black"
        android:textSize="46sp"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/imgcontactollamar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/text_contactanos"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/ic_phone"
        android:onClick="llamar"
        />

    <TextView
        android:id="@+id/txtnumerocontacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@id/imgcontactollamar"
        android:text="@string/numero_de_contacto"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <ImageView
        android:id="@+id/imgcontactocorreo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/txtnumerocontacto"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:src="@drawable/ic_mail"
        android:scaleType="centerInside"
        android:onClick="correoEnviar"/>

    <TextView
        android:id="@+id/txtmailcontacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@id/imgcontactocorreo"
        android:text="@string/txt_correo"
        android:textColor="@color/black"
        android:textSize="22sp"/>

    <TextView
        android:id="@+id/txtfixit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txtmailcontacto"
        android:text="@string/fixit_tittle"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"
        android:textSize="46sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txtserviciosdomicilio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txtfixit"
        android:text="@string/servicios_a_domicilio"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txtslogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txtserviciosdomicilio"
        android:gravity="center"
        android:text="@string/txt_slogan_help"
        android:textColor="@color/black"
        android:textSize="18sp" />

</RelativeLayout>
