<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/txtCambiarpassEspecialista"
        android:layout_width="match_parent"
        android:layout_height="93dp"
        android:layout_alignParentTop="true"
        android:background="@color/header_login_specialist"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/cambiar_contrase_a"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        />

    <ImageButton
        android:id="@+id/volver"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="33dp"
        android:layout_gravity="top"
        android:background="@drawable/ic_flechavolver"
        android:scaleType="centerInside"
        android:onClick="volverMenu"
        />

    <LinearLayout
        android:id="@+id/containerContraseñasEspecialista"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtCambiarpassEspecialista"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/txtContraseñaActual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="top"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/contrase_a_actual"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginStart="30dp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edPassActualLayout"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            app:endIconMode="password_toggle">

            <EditText
                android:id="@+id/edpassactual"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/inserte_su_contrase_a_actual"
                android:paddingStart="10dp"
                android:inputType="textPassword"
                android:background="@drawable/image_rectangle1"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtContraseñaNueva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="-0.5dp"
            android:layout_gravity="top"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/contrase_a_nueva"
            android:textStyle="bold"
            android:textColor="#FF000000"
            android:textSize="20sp"
            android:layout_marginStart="30dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edNuevaContraseñaLayout"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            app:endIconMode="password_toggle">

            <EditText
                android:id="@+id/edNuevaContraseña"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/inserte_su_nueva_contrase_a"
                android:paddingStart="10dp"
                android:inputType="textPassword"
                android:background="@drawable/image_rectangle1"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtConfirmarContraseña"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="-0.5dp"
            android:layout_gravity="top"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/confirmar_contrase_a"
            android:textStyle="bold"
            android:textColor="#FF000000"
            android:textSize="20sp"
            android:layout_marginStart="30dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edConfirmarContraseñaLayout"
            android:layout_width="347dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            app:endIconMode="password_toggle">

            <EditText
                android:id="@+id/edConfirmarContraseña"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/confirme_su_nueva_contrase_a"
                android:paddingStart="10dp"
                android:inputType="textPassword"
                android:background="@drawable/image_rectangle1"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btncambiarpassEspecialista"
        android:layout_width="275dp"
        android:layout_height="80dp"
        android:layout_below="@id/containerContraseñasEspecialista"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:text="@string/btn_cambiar_contrase_a"
        android:textSize="20sp"
        />

</RelativeLayout>
