<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <!-- Header -->
    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_comentarios_clientes"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@color/header"
        android:gravity="center"
        android:padding="25dp"
        />
    <ImageView
        android:id="@+id/flechavolver_comments"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="35dp"
        android:src="@drawable/ic_flechavolver"
        />

    <!-- Comentario -->
    <LinearLayout
        android:id="@+id/comentariolayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_below="@+id/header"
        android:layout_marginTop="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="8dp"
            >

            <TextView
                android:id="@+id/txt_nuevocomentario"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:includeFontPadding="false"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/nuevocomentario"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingStart="8dp"
                />

            <RatingBar
                android:id="@+id/estrellas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="1.0"
                style="@style/Widget.AppCompat.RatingBar.Small"
                />
        </LinearLayout>

        <EditText
            android:id="@+id/comentario"
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:background="@color/white"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            />
    </LinearLayout>

    <!-- Boton para publicar comentario -->
    <Button
        android:id="@+id/btnpublicarcomentario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/comentariolayout"
        android:layout_centerHorizontal="true"
        android:text="@string/publicarcomentario"
        android:textStyle="bold"
        android:textSize="20sp"
        android:onClick="addComment"
        />

</RelativeLayout>